--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "aikido-club",
   "version": "1.0.0",
-  "description": "Aikido Club Website",
+  "description": "IIUM Aikido Club Website",
   "private": true,
+  "keywords": [
+    "aikido",
+    "iium",
+    "martial arts",
+    "club"
+  ],
+  "license": "MIT",
   "scripts": {
     "start": "webpack serve --open --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^11.0.0",
-    "html-webpack-plugin": "^5.5.3",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.2.3",
-    "webpack-merge": "^5.9.0"
+    "copy-webpack-plugin": "^13.0.1",
+    "html-webpack-plugin": "^5.6.4",
+    "webpack": "^5.101.3",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2",
+    "webpack-merge": "^6.0.1"
   }
 }
