fix: Add base URL support for GitHub Pages subdirectory deployment

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -6,7 +6,7 @@ backend:
   app_id: 2762520
 
 media_folder: public/img
-public_folder: /img
+public_folder: /AikidoClub/img
 
 collections:
   - name: news
