fix: Remove invalid auth_endpoint config for GitHub PKCE

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,9 +3,7 @@ backend:
   repo: 2217441/AikidoClub
   branch: master
   auth_type: pkce
-  app_id:  Ov23liblhThHkvXp8Y0E # Replace with your GitHub OAuth App Client ID
-  base_url: https://2217441.github.io
-  auth_endpoint: /AikidoClub/admin/
+  app_id: Ov23liblhThHkvXp8Y0E
 
 media_folder: public/img
 public_folder: /AikidoClub/img
